[package]
name = "chartr"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
image = "0.25.2"
libbsb = { path = "../libbsb" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
