[package]
name = "libbsb"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
itertools = "0.12.1"
nom = "7.1.3"
nom-regex = "0.2.0"
regex = "1.10.6"
strum = { version = "0.26", features = ["derive"] }
tracing = "0.1.40"
image = "0.25.2"
thiserror = "1.0.64"
bon = "2.3.0"

[dev-dependencies]
image = { workspace = true }
sha256 = "1.5.0"
mktemp = "0.5.1"
